# 012.Investor-OS

./: .current_sprint  .directory  .dockerignore  .env.example  .fuse_hidden0000029300000034  .gitignore  AGENT_SYSTEM.md  BORROWED.md  CHANGELOG.md  CLAUDE.md  CODE_AUDIT_REPORT.md  Cargo.toml  DECISION_LOG.md  Dockerfile  Makefile  PRODUCTION_FIX_PLAN.md  README.md  ROADMAP.md  SPRINTS_ABCD.md  SPRINTS_OVERVIEW.md  SPRINT_44_DASHBOARD.md  SPRINT_45_WEBSOCKET.md  TODO_TOMORROW.md  docker-compose.distributed.yml  docker-compose.monitoring.yml  docker-compose.yml  nul
.agent/workflows/: documentation.md  golden-path.md  onboarding.md  rag-module.md  sprint.md  test-gate.md
.cargo/: audit.toml
.github/workflows/: build-and-deploy.yml  ci.yml  full-e2e-matrix.yml  nightly-runtime-contract.yml  pr-checks.yml  release-evidence-bundle.yml
000.docs/: DAILY_STATUS_2026-02-10.md
benches/: hrm_inference.rs
config/: prometheus.yml
config/grafana/: alerts.yaml  dashboard.json
docker/truenas/: .env.example  Dockerfile  docker-compose.yml
docs/: ARCHITECTURE_ECOSYSTEM.md  COVERAGE_ANALYSIS.md  EU_COMPLIANCE_INTEGRATION.md  I18N_GUIDE.md  INVESTOR_OS_MASTER_ROADMAP.md  INVESTOR_OS_ULTRA_ROADMAP.md  PRODUCTION_READY.md  PRODUCT_DOCUMENTATION.md  PROJECT_COMPLETE.md  PROJECT_STATUS.md  QUANTUM_ML.md  QUICK_START.md  ROADMAP-v2.0.md  ROADMAP.md  ROADMAP_10_10.md  RUST_AI_ARCHITECTURE.md  SPRINTS_v3.5.md  SPRINT_GUIDE.md  STATUS_LOG.md  Sprint_22_Risk_Management.md  Sprint_23_ML_Pipeline.md  Sprint_24_Streaming.md  Sprint_25_Multi_Agent.md  Sprint_26_AI_Safety_Control.md  Sprint_27_Global_Exchanges.md  Sprint_28_Multi_Prime.md  Sprint_29_24_7_Trading.md  Sprint_30_Tax_Compliance.md  TEST_IMPLEMENTATION_GUIDE.md  TEST_INFRASTRUCTURE_COMPLETE.md  TEST_STRATEGY.md  TRADING_CHARTS.md  TRADING_MODES.md  UI_UX_AUDIT_REPORT.md  UI_UX_CHANGES_SUMMARY.md  UI_UX_FINAL_REPORT.md  current_status.yaml  data_sources_architecture_proposal.md  free_data_sources_comprehensive.md  sprint34_security.md  (+1 more)
docs/archive/: TODO_SPRINT_43.md
docs/deployment/: DEPLOYMENT.md  POSTGRES_OPTIMIZATION.md  RUNBOOK.md
docs/hrm/: ARCHITECTURE.md
docs/phoenix/: PHOENIX_MODE.md
docs/specs/: GOLDEN-PATH.md  SPEC-v1.0.md  SPRINT-1.md  SPRINT-10.md  SPRINT-11.md  SPRINT-12.md  SPRINT-13.md  SPRINT-14.md  SPRINT-15.md  SPRINT-16.md  SPRINT-17.md  SPRINT-18.md  SPRINT-19.md  SPRINT-2.md  SPRINT-20.md  SPRINT-21.md  SPRINT-3.md  SPRINT-4.md  SPRINT-5.md  SPRINT-6.md  SPRINT-7.md  SPRINT-8.md  SPRINT-9.md
docs/sprints/: README.md  sprint31_strategy_selector.md  sprint32_portfolio_optimization.md  sprint33_monitoring.md  sprint34_security.md  sprint35_deployment.md  sprint36_hrm_engine.md  sprint37_synthetic_data.md  sprint38_lstm_architecture.md  sprint39_safetensors_loading.md  sprint40_true_weights.md  sprint41_golden_dataset.md  sprint42_strategy_integration.md  sprint43_rest_api.md  sprint44_frontend_dashboard.md  sprint45_websocket_streaming.md  sprint46_performance_monitoring.md  sprint47_frontend_websocket.md  sprint48_gpu_acceleration.md  sprint49_distributed_inference.md  sprint50_autoscaling.md  sprint51_quantum_ml.md  sprint52_eu_compliance.md
examples/: hrm_demo.rs  hrm_intel_gpu_test.rs
frontend/: README.md  package.json  tailwind.config.js
frontend/investor-dashboard/: Dockerfile  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  proxy.ts  vitest.config.ts  warning-budget-chromium.jsonl  warning-budget-mobile-chrome.jsonl
frontend/public/: index.html
frontend/src/: index.tsx  styles.css
k8s/autoscaling/: README.md  configmap.yaml  cronjob-scale-down.yaml  deployment.yaml  hpa.yaml  kustomization.yaml  namespace.yaml  pod-disruption-budget.yaml  service-account.yaml  service.yaml
k8s/base/: api.yaml  configmap.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  monitoring.yaml  namespace.yaml  pdb.yaml  postgres.yaml  redis.yaml  secrets.yaml
migrations/: 001_postgres_optimization.sql  20250211000001_create_data_sources_tables.sql  20250211000002_seed_data_sources.sql  20250212000001_eu_compliance.sql  20260304000001_auth_users_sessions.sql  20260304000002_auth_lockout.sql  20260304000003_audit_events.sql  20260304000004_totp_api_keys.sql  20260304000005_killswitch_state.sql  20260304000006_project_tracking.sql
models/: hrm_synthetic_v1.safetensors  hrm_synthetic_v1_metadata.json
scripts/: backup.sh  deploy-k8s.sh  flaky_triage_report.sh  generate_release_evidence_bundle.sh  restore.sh  runtime_contract_smoke.sh  status_update.sh  warning_budget_report.sh
scripts/hrm/: convert_to_safetensors.py  generate_golden_dataset.py  generate_synthetic_data.py  train_hrm.py
sprints/: BOARD.md  SPRINT_REGISTRY.yaml  active.toml
sprints/reports/: PROGRESS_SNAPSHOT.md  SPRINT-071-E2E-MATRIX.md  SPRINT-071-PERFORMANCE-BASELINE.md  SPRINT-071-RESILIENCE-DRILLS.md  SPRINT-071.md  SPRINT-072.md  (+40 more)
src/: anti_fake.rs  lib.rs  main.rs
tests/: api_integration_test.rs  coverage_chains_test.rs  coverage_graph_test.rs  coverage_temporal_test.rs  coverage_tools_test.rs  e2e_full_scenario_test.rs  hrm_api_test.rs  hrm_golden_dataset_test.rs  hrm_model_loading_test.rs  hrm_strategy_integration_test.rs  hrm_validation_test.rs  integration_cross_sprint_test.rs  integration_main_app_test.rs  langchain_test.rs  langgraph_test.rs  ml_integration_test.rs  performance_test.rs  phoenix_integration_test.rs  sprint112_websocket_ingestion_test.rs  sprint11_multi_asset_test.rs  sprint12_streaming_test.rs  sprint13_risk_test.rs  sprint15_treasury_test.rs  sprint16_margin_test.rs  sprint17_global_markets_test.rs  sprint18_automation_test.rs  sprint19_alpha_generation_test.rs  sprint20_advanced_ml_test.rs  sprint21_experimental_test.rs  sprint24_streaming_test.rs  sprint25_multi_agent_test.rs  sprint26_ai_safety_test.rs  sprint27_global_exchanges_test.rs  sprint28_prime_broker_test.rs  sprint29_24_7_trading_test.rs  sprint30_tax_compliance_test.rs  sprint31_strategy_selector_test.rs  sprint32_portfolio_optimization_test.rs  sprint33_monitoring_test.rs  sprint34_security_test.rs  (+10 more)
(+459 files in other folders)
