[package]
name = "investor-os"
version = "0.1.0"
edition = "2021"
description = "Investor OS v3.0 — Autonomous AI Trading System"
authors = ["NeuroCOD Team"]
license = "LGPL-2.1"

[dependencies]
# RAG Intelligence (shared L1-L35)
neurocod-rag = { path = "/mnt/nas-data/dev/neurocod-rag" }

# Async runtime
tokio = { version = "1.48", features = ["rt-multi-thread", "macros"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
rust_decimal = { version = "1.35", features = ["serde", "maths"] }

# Error handling & logging
thiserror = "2.0"
tracing = "0.1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
pgvector = { version = "0.4", features = ["sqlx"] }

# Web framework
axum = "0.7"
tower = "0.4"

# Redis (for caching and rate limiting)
redis = { version = "0.24", features = ["tokio-comp"] }

# HTTP client (for external APIs)
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tokio = { version = "1.48", features = ["full", "test-util"] }
